--- a/package.json
+++ b/package.json
@@ -21,6 +21,15 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
-    "vite": "^5.0.0"
+    "vite": "^5.0.0",
+    "@vitejs/plugin-basic-ssl": "^1.0.2",
+    "autoprefixer": "^10.4.16",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
+    "vite-plugin-mkcert": "^1.17.1",
+    "vite-plugin-svgr": "^4.2.0"
   }
 }
