--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@babylonjs/core": "^6.8.1",
+    "@babylonjs/loaders": "^6.8.1",
+    "open": "^9.1.0",
+    "qrcode": "^1.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
@@ -30,6 +34,7 @@
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
     "vite-plugin-mkcert": "^1.17.1",
-    "vite-plugin-svgr": "^4.2.0"
+    "vite-plugin-svgr": "^4.2.0",
+    "cloudflared": "^0.4.0"
   }
 }
